--- a/pages/learn.html
+++ b/pages/learn.html
@@ -3,106 +3,145 @@
 <head>
 
     <meta http-equiv="content-type"
-          content="text/html"; charset="UTF-8"/>
+          content="text/html" charset="UTF-8"/>
     <title>
         This is our AntGame
     </title>
     <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"
             type="text/javascript"></script>
     <script type="text/javascript">
-        window.TIMER = 'no_timer';//-1代表没有定时器
+
+        let game_result_set;
+        let game_round = 0;
+        let length = 1000;
+        let por;
+
+
+        $("#start").click(function(){//启动暂停按钮何二为一了
+            if($(this).text()=='继续'){//继续程序
+                create_timer();
+                $(this).text('暂停');
+                return
+            }
+            delete_timer();
+            $(this).text('继续')
+        });
+
+        $("#restart").click(function(){//启动定时器
+            $("#start").text('暂停');
+            init();
+            delete_timer();
+            create_timer()
+        });
+
+        function create_timer(){
+            if(TIMER != 'no_timer')
+                return;
+            TIMER = window.setInterval(ants_move, TIME_INTERVAL)//生成定时器
+        }
+
+        function delete_timer(){
+            if(TIMER == 'no_timer')
+                return
+            window.clearInterval(TIMER)//清除定时器
+            window.TIMER = 'no_timer'
+        }
+
+
+
+        function single_move(dom, round){//单个蚂蚁移动
+            //   需要传入每个蚂蚁的位置pos
+            let num = parseInt(dom.text());
+            // console.log(num);`
+            let pos= game_result_set.gameStatusResult[round][num]*por-12.5;
+            dom.css('left', pos)
+        }
+
+        function ants_move(){//所有蚂蚁移动
+            $('#box>.ant').each(function(){//实验杆移动
+                let dom = $(this);
+                single_move(dom, game_round);
+                // console.log(TIMER);
+                destroy_dom(dom,game_round);
+            });
+            game_round++;
+        }
+
+        function destroy_dom(dom, round){//删除不在杆上的蚂蚁
+            let num = parseInt(dom.text());
+
+            if(game_result_set.gameStatusResult[round][num] === -1){
+                console.log("delete ant");
+                dom.remove()
+            }
+
+        }
+        // function test() {
+        //     console.log($("#ant_num").val());
+        // }
+
+        function requestServer(url) {
+            let ant_num = $("#ant_num").val();
+            console.log(url);
+            jQuery.getJSON(url,
+            {
+                "antNum": ant_num,
+                "poleLength": $("#pole_length").val(),
+                "incTime": $("#time_interval").val(),
+                "antDirections": $("#ant_directions").val(),
+                "antPositions": $("#ant_positions").val()
+            },
+            function (data) {
+                game_round = 0;
+                let base_left = $("#pole").position().left;
+
+                let dom_str = '<span class="ant" id="ant_{id}" style="left:{left}px">{number}<img src="images/ant.jpg" style="height: 30px;width: 30px;"></span>';
+
+                //console.log(base_left);
+
+                function init(){
+                    let ant_num = parseInt($("#ant_num").val());            //需要传入蚂蚁数量
+                    window.TIME_INTERVAL = parseInt($("#time_interval").val());
+                    create_ants(ant_num);
+                }
+
+
+                function create_ant(id, left){//生成单只蚂蚁
+                    let temp_dom = dom_str.replace('{id}', id).replace('{left}', left).replace('{number}',id);
+                    return temp_dom
+                }
+
+                function create_ants(n) {//生成蚂蚁
+
+                    let box_html = '';
+                    for (let i = 0; i < n; i++) {
+                        let temp_left = data.gameStatusResult[0][i] * por-12.5;         //从输入中获取
+                        box_html += create_ant(i, temp_left);
+                    }
+                    $(".container").html(box_html)//生成实验杆蚂蚁
+                }
+
+
+                init();
+
+                create_timer();
+                let pole_length = data.poleLength;
+                game_result_set = data;
+                por = length/pole_length;
+                // console.log($("span.ant"));
+
+                // $('#box>.ant').each(function () {
+                //     console.log($(this).text());
+                // })
+            })
+        }
+
+    window.TIMER = 'no_timer';//-1代表没有定时器
 
         function compare(o1, o2){//特定的比较器，比较style中的left
             return o1.position().left - o2.position().left
         }
-        $(document).ready(function(){
 
-            let base_left = $("#pole").position().left;
-            let length = 1000;
-            let dom_str = '<span class="ant" id="ant_{id}" style="left:{left}px"><img src="images/ant.jpg" style="height: 30px;width: 30px;"></span>';
-
-
-            $("#start").click(function(){//启动暂停按钮何二为一了
-                if($(this).text()=='继续'){//继续程序
-                    create_timer();
-                    $(this).text('暂停');
-                    return
-                }
-                delete_timer();
-                $(this).text('继续')
-            });
-
-            $("#restart").click(function(){//启动定时器
-                $("#start").text('暂停');
-                init();
-                delete_timer();
-                create_timer()
-            });
-
-            function create_timer(){
-                if(TIMER != 'no_timer')
-                    return;
-                TIMER = window.setInterval(ants_move, TIME_INTERVAL)//生成定时器
-            }
-
-            function delete_timer(){
-                if(TIMER == 'no_timer')
-                    return
-                window.clearInterval(TIMER)//清除定时器
-                window.TIMER = 'no_timer'
-            }
-
-            function init(){
-                let ant_num = parseInt($("#ant_num").val());            //需要传入蚂蚁数量
-                window.TIME_INTERVAL = parseInt($("#time_interval").val());
-                create_ants(ant_num)
-            }
-
-            init();
-
-            create_timer();
-
-            function create_ant(id, left){//生成单只蚂蚁
-                let temp_dom = dom_str.replace('{id}', id).replace('{left}', left);
-                return temp_dom
-            }
-
-            function create_ants(n) {//生成蚂蚁
-
-                let box_html = '';
-                for (let i = 0; i < n; i++) {
-                    let temp_left = (length/(n+1))*i-12;         //从输入中获取
-                    box_html += create_ant(i, temp_left);
-                }
-                $(".container").html(box_html)//生成实验杆蚂蚁
-            }
-
-            function single_move(dom, pos){//单个蚂蚁移动
-                //   需要传入每个蚂蚁的位置pos
-                let re_pos=parseInt($("#pole_length").val());
-                pos=pos/re_pos*1000;
-                dom.css('left', pos)
-            }
-
-            function ants_move(){//所有蚂蚁移动
-                let ants = [];
-                $('#container>.ant').each(function(){//实验杆移动
-                    let dom = $(this);
-                    single_move(dom);
-                    destroy_dom(dom);
-                    ants.push(dom);
-                })
-
-            }
-
-            function destroy_dom(dom){//删除不在杆上的蚂蚁
-                let r = parseInt(dom.width())/2;
-                let left = dom.position().left;
-                if(left<base_left-r || left>base_left+length-r)
-                    dom.remove()
-            }
-
-        })
 
 
 
@@ -112,21 +151,25 @@
     <h1 align="middle">蚂蚁爬杆实验</h1>
     <div class="card">
         <h3>控制台</h3>
-        <form method="post">
+        <div>
             <div class="card-console">
                 <label>蚂蚁数量：<input type="text" id='ant_num' value="5" name="antNum"></label>
                 <label>杆长：<input type="text" id='pole_length' value="300" name="poleLength"></label>
-                <label>每步的移动时间(ms)：<input type="text" id='time_interval' value="20"></label>
+                <label>每步的移动时间(ms)：<input type="text" id='time_interval' value="20" name="incTime"></label>
+                <label>蚂蚁初识方向（空格分隔）<input type="text" id='ant_directions' value="-1 -1 1 1 1" name="antDirections"></label>
+                <label>蚂蚁初识位置（空格分隔 小于长度）<input type="text" id='ant_positions' value="30 60 90 120 150" name="antPositions"></label>
             </div>
             <div class="card-console">
-                <button class="btn-console" id='start'>暂停</button>
-                <button class="btn-console" id='restart'>重新开始</button>
+                <button class="btn-console" id="start_game" onclick="requestServer('http://localhost:8080/AntGame_war_exploded/startGame')">开始自定义模拟</button>
+                <button class="btn-console" id="start_simulation">开始模拟所有情况/下一种情况</button>
+                <button class="btn-console" id="reset">重置模拟（回到最初的情况）</button>
+<!--                <button class="btn-console" id='start'>暂停</button>-->
+<!--                <button class="btn-console" id='restart'>重新开始</button>-->
             </div>
-        </form>
+        </div>
     </div>
 
-    <div class="container" style="height: 50px;width: 1000px">
-
+    <div class="container" id="box" style="height: 50px;width: 1000px">
     </div>
     <div>
         <img id="pole" src="images/pole.jpg" height="50"; width="1000">
@@ -150,6 +193,7 @@
         position: absolute;
         height: 5px;
         width: 5px;
+        bottom: 68px;
         z-index: 2;
     }
 
