修复了模拟结束后不重置迭代器的bug

--- a/pages/learn.html
+++ b/pages/learn.html
@@ -31,7 +31,7 @@
             $("#start").text('暂停');
             init();
             delete_timer();
-            create_timer()
+            create_timer();
         });
 
         function create_timer(){
