--- a/pages/learn.html
+++ b/pages/learn.html
@@ -156,8 +156,8 @@
                 <label>蚂蚁数量：<input type="text" id='ant_num' value="5" name="antNum"></label>
                 <label>杆长：<input type="text" id='pole_length' value="300" name="poleLength"></label>
                 <label>每步的移动时间(ms)：<input type="text" id='time_interval' value="20" name="incTime"></label>
-                <label>蚂蚁初识方向（空格分隔）<input type="text" id='ant_directions' value="-1 -1 1 1 1" name="antDirections"></label>
-                <label>蚂蚁初识位置（空格分隔 小于长度）<input type="text" id='ant_positions' value="30 60 90 120 150" name="antPositions"></label>
+                <label>蚂蚁初始方向（空格分隔）<input type="text" id='ant_directions' value="-1 -1 1 1 1" name="antDirections"></label>
+                <label>蚂蚁初始位置（空格分隔 小于长度）<input type="text" id='ant_positions' value="30 60 90 120 150" name="antPositions"></label>
             </div>
             <div class="card-console">
                 <button class="btn-console" id="start_game" onclick="requestServer('http://localhost:8080/AntGame_war_exploded/startGame')">开始自定义模拟</button>
