--- a/pages/learn.html
+++ b/pages/learn.html
@@ -123,11 +123,26 @@
                     $(".container").html(box_html)//生成实验杆蚂蚁
                 }
 
-                function minTime() {
-                    var min;
-                    min.getElementById("min_time").val(data.minTime);
-                }
+                // 为结果区赋值
+                let iteration_index = data.iteratorIndex;
+                let min_time = data.minTime;
+                let max_time = data.maxTime;
+                let game_duration = data.gameDuration;
 
+                if(iteration_index!==-1) {
+                    $("#min_time").val(min_time);
+                    $("#max_time").val(max_time);
+                    $("#iterator_index").val(iteration_index);
+                }else{
+                    $("#min_time").val("单次模拟没有最小值");
+                    $("#max_time").val("单次模拟没有最大值");
+                    $("#iterator_index").val("1");
+                }
+                if(game_duration!==-1){
+                    $("#game_duration").val(game_duration);
+                }else{
+                    $("#game_duration").val("没有");
+                }
 
                 init();
 
@@ -174,9 +189,12 @@
                 <button class="btn-console" id="start_game" onclick="requestServer('http://localhost:8080/AntGame_war_exploded/startGame')">开始自定义模拟</button>
                 <button class="btn-console" id="start_simulation" onclick="requestServer('http://localhost:8080/AntGame_war_exploded/startSimulation')">开始模拟所有情况/下一种情况</button>
                 <button class="btn-console" id="reset" onclick="requestServer('http://localhost:8080/AntGame_war_exploded/reset')">重置模拟（回到最初的情况）</button>
-                                <!--                <button class="btn-console" id='start'>暂停</button>-->
+                <!--                <button class="btn-console" id='start'>暂停</button>-->
                 <!--                <button class="btn-console" id='restart'>重新开始</button>-->
             </div>
+        </div>
+        <div>
+<!--            <label id="game_duration">游戏总时长：{gameDuration}</label>-->
         </div>
     </div>
 
@@ -185,8 +203,11 @@
     <div>
         <img id="pole" src="images/pole.jpg" height="20"; width="1000">
     </div>
-    <div>
-        <label>最大时间： <output type="text" id="max_time" >
+    <div class="result-container">
+        <label>游戏时长：      <output id="game_duration"></output></label><br>
+        <label>模拟轮次：      <output id="iterator_index"></output></label>
+        <label>最大时间：      <output id="max_time"></output></label>
+        <label>最小时间：      <output id="min_time"></output></label>
     </div>
 
 <style>
